force-app/main/default/objects/Opportunity/fields/isThroughDcousign__c.field-meta.xml
<CustomField>
    <fullName>isThroughDcousign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is Contract signed through docusign or not</description>
    <label>isThroughDcousign</label>
    <type>Checkbox</type>
</CustomField>