force-app/main/default/objects/Opportunity/fields/Legacy_CRM_Org_URL__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CRM_Org_URL__c</fullName>
    <description>Domain of Source CRM Org</description>
    <label>Legacy CRM Org URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>