force-app/main/default/objects/Opportunity/fields/Legacy_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Opportunity_Id__c</fullName>
    <description>Opportunity Id of Source CRM Org</description>
    <label>Legacy Opportunity Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>