force-app/main/default/objects/Opportunity/fields/Legal_Representative_1__c.field-meta.xml
<CustomField>
    <fullName>Legal_Representative_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Legal Representative 1 Contact Lookup For Brazil</description>
    <inlineHelpText>For Brasil</inlineHelpText>
    <label>Legal Representative 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Legal Representative 1)</relationshipLabel>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>