force-app/main/default/objects/Opportunity/fields/Legal_Representative_2__c.field-meta.xml
<CustomField>
    <fullName>Legal_Representative_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Legal Representative 2 Contact Lookup For Brazil</description>
    <inlineHelpText>For Brasil</inlineHelpText>
    <label>Legal Representative 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Legal Representative 2)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>