force-app/main/default/objects/Opportunity/fields/Main_Contract__c.field-meta.xml
<CustomField>
    <fullName>Main_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main Contract that is being changed by this opportunity.</description>
    <inlineHelpText>Main Contract that is being changed by this opportunity.</inlineHelpText>
    <label>Main Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities (Main Contract)</relationshipLabel>
    <relationshipName>ContractOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>