force-app/main/default/objects/Opportunity/fields/Manual_Contract__c.field-meta.xml
<CustomField>
    <fullName>Manual_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We have create manual contract using this check box.</description>
    <label>Manual Contract</label>
    <type>Checkbox</type>
</CustomField>