force-app/main/default/objects/Opportunity/fields/Master_Contract_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract_Auto_Number__c</fullName>
    <description>Base Contract Auto Number to be used if not an Amendment Opportunity</description>
    <displayFormat>C-{0000000}</displayFormat>
    <label>Master Contract Auto Number</label>
    <type>AutoNumber</type>
</CustomField>