force-app/main/default/objects/Opportunity/fields/Master_Contract_No__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract_No__c</fullName>
    <description>Master Contract No to Display to Customer on Contract and Invoic</description>
    <formula>IF(  ISBLANK(Master_Contract_No_Previous__c)  , 
     Master_Contract_Auto_Number__c , 
     Master_Contract_No_Previous__c  + &quot;-&quot; +  TEXT(Master_Contract_No_Version__c)  
)</formula>
    <label>Master Contract No</label>
    <type>Text</type>
</CustomField>