force-app/main/default/objects/Opportunity/fields/Master_Contract_No_Previous__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract_No_Previous__c</fullName>
    <description>To be copied from Master Opportunity to Amendment Opportunity</description>
    <label>Master Contract No Previous</label>
    <length>40</length>
    <type>Text</type>
</CustomField>