force-app/main/default/objects/Opportunity/fields/Master_Contract_No_Version__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract_No_Version__c</fullName>
    <description>Version of Contract. This should be incremented each time an Amendment Opportunity is created.</description>
    <label>Master Contract No Version</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>