force-app/main/default/objects/Opportunity/fields/Master_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Master_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to to Main Opporunity. To be populated in case of amendment opportunity</description>
    <label>Master Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Master Opportunity)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>