force-app/main/default/objects/Opportunity/fields/Master_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Master_Opportunity_Amount__c</fullName>
    <description>Master Opportunity Amount. I case of Amendment Opportunity this will show value of main opportunity</description>
    <formula>IF(Master_Opportunity__c != null,Master_Opportunity__r.Amount,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>