force-app/main/default/objects/Opportunity/fields/Milestone_10_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_10_Delivery_Date__c</fullName>
    <description>Billing 10 Date of Opportunity</description>
    <label>Billing 10 Date</label>
    <type>Date</type>
</CustomField>