force-app/main/default/objects/Opportunity/fields/Milestone_11_Amount__c.field-meta.xml
<CustomField>
    <fullName>Milestone_11_Amount__c</fullName>
    <description>Billing 11 Amount of Opportunity</description>
    <label>Billing 11 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>