force-app/main/default/objects/Opportunity/fields/Milestone_11_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_11_Delivery_Date__c</fullName>
    <description>Billing 11 Date of Opportunity</description>
    <label>Billing 11 Date</label>
    <type>Date</type>
</CustomField>