force-app/main/default/objects/Opportunity/fields/Milestone_12_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_12_Delivery_Date__c</fullName>
    <description>Billing 12 Date of Opportunity</description>
    <label>Billing 12 Date</label>
    <type>Date</type>
</CustomField>