force-app/main/default/objects/Opportunity/fields/Milestone_12_Percent__c.field-meta.xml
<CustomField>
    <fullName>Milestone_12_Percent__c</fullName>
    <description>Billing 12 Percent of Opportunity</description>
    <label>Billing 12 Percent</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>