force-app/main/default/objects/Opportunity/fields/MulesoftSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>MulesoftSyncStatus__c</fullName>
    <description>Field to be used by Mulesoft to update the data in redshift</description>
    <label>MulesoftSyncStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>