force-app/main/default/objects/Opportunity/fields/No_Order__c.field-meta.xml
<CustomField>
    <fullName>No_Order__c</fullName>
    <description>If this checkbox is checked, then user will not be able to create order manually or automatically.</description>
    <formula>Default_Edition__r.No_Order_Creation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this checkbox is checked, then user will not be able to create order manually or automatically.</inlineHelpText>
    <label>No Order</label>
    <type>Checkbox</type>
</CustomField>