force-app/main/default/objects/Opportunity/fields/Non_Reseller_Agent__c.field-meta.xml
<CustomField>
    <fullName>Non_Reseller_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Before Close Won, SSC/System Admin should be able to mark the Opportunity as &quot;Non-Reseller&quot; opportunity, so that the agent opportunity will become eligible for VAT Refund.</description>
    <inlineHelpText>Before Close Won, SSC/System Admin should be able to mark the Opportunity as &quot;Non-Reseller&quot; opportunity, so that the agent opportunity will become eligible for VAT Refund.</inlineHelpText>
    <label>Non Reseller Agent</label>
    <type>Checkbox</type>
</CustomField>