force-app/main/default/objects/Opportunity/fields/Open_Amendment_Requests__c.field-meta.xml
<CustomField>
    <fullName>Open_Amendment_Requests__c</fullName>
    <description>Total count of Open Amendment Requests for processing</description>
    <label>Open Amendment Requests</label>
    <summaryFilterItems>
        <field>Change_Request__c.Data_Synced__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Change_Request__c.Change_Request_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Change_Request__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>