force-app/main/default/objects/Opportunity/fields/Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner__c</fullName>
    <description>Opportunity Owner Name</description>
    <label>Opp Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>