force-app/main/default/objects/Opportunity/fields/Opportunity_Contact__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Individual who is working with on this opportunity</description>
    <inlineHelpText>Individual you are working with on this opportunity</inlineHelpText>
    <label>Opportunity Contact</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Opportunity Contact)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>