force-app/main/default/objects/Opportunity/fields/Opportunity_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number_Text__c</fullName>
    <description>Opportunity Number (Text)  - used in case IM Number different from auto number</description>
    <label>Opportunity Number (Text)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>