force-app/main/default/objects/Opportunity/fields/Payment_Schedule_2__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked Payment Schedule Dates will come from Edition Level</description>
    <label>Payment Schedule 2</label>
    <type>Checkbox</type>
</CustomField>