force-app/main/default/objects/Opportunity/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <description>This picklist provides options for all payment schedules available</description>
    <inlineHelpText>This picklist provides options for all payment schedules available</inlineHelpText>
    <label>Payment Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Schedule</valueSetName>
    </valueSet>
</CustomField>