force-app/main/default/objects/Opportunity/fields/Payment_Schedules__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedules__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If Checked Payment Schedule Dates will come from Edition Level</description>
    <label>Used Edition Payment Schedule</label>
    <type>Checkbox</type>
</CustomField>