force-app/main/default/objects/Opportunity/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Payment Status</description>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Paid</fullName>
                <default>true</default>
                <label>Not Paid</label>
            </value>
            <value>
                <fullName>Partial Paid</fullName>
            </value>
            <value>
                <fullName>Past Due</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>​Paid</fullName>
                <isActive>false</isActive>
                <label>​Paid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>