force-app/main/default/objects/Opportunity/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>Purchase Order Number</description>
    <label>PO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>