force-app/main/default/objects/Opportunity/fields/Quote_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Template_Id__c</fullName>
    <description>Conga Template for Quote Document.</description>
    <formula>Legal_Entity__r.Quote_Template__r.Id</formula>
    <label>Quote Template Id</label>
    <type>Text</type>
</CustomField>