force-app/main/default/objects/Opportunity/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Rejection Reason</description>
    <label>Rejection Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>