force-app/main/default/objects/Opportunity/fields/Revenue_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Estimate__c</fullName>
    <description>Estimated Revenue.</description>
    <label>Revenue Estimate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>