force-app/main/default/objects/Opportunity/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <description>Opportunity Owner Email of CRM org</description>
    <label>Sales Person Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>