force-app/main/default/objects/Opportunity/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Series to which Opportunity&apos;s Edition belongs.</description>
    <label>Series</label>
    <referenceTo>Series__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>