force-app/main/default/objects/Opportunity/fields/Source_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Contract_Number__c</fullName>
    <description>To capture the contract number from the source CRM</description>
    <externalId>true</externalId>
    <label>Source Contract Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>