force-app/main/default/objects/Opportunity/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>First Due date</description>
    <inlineHelpText>First Due date</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>