force-app/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of opportunity.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer Contacted</fullName>
            </value>
            <value>
                <fullName>Customer Engaged</fullName>
            </value>
            <value>
                <fullName>Proposal Sent</fullName>
            </value>
            <value>
                <fullName>Revised Proposal Sent</fullName>
            </value>
            <value>
                <fullName>Pending Accounting Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting Payment</fullName>
            </value>
            <value>
                <fullName>Accounting Rejected</fullName>
            </value>
            <value>
                <fullName>AR Cancel / Re-bill</fullName>
            </value>
            <value>
                <fullName>Booth/Sponsorship Cancellation</fullName>
            </value>
            <value>
                <fullName>Digital / Print Cancellation</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Online Booth Form In Review</fullName>
            </value>
            <value>
                <fullName>Partial Payment</fullName>
            </value>
            <value>
                <fullName>Pending Change</fullName>
            </value>
            <value>
                <fullName>Legacy Lost</fullName>
            </value>
            <value>
                <fullName>Legacy Cancelled</fullName>
            </value>
            <value>
                <fullName>Legacy Won</fullName>
            </value>
            <value>
                <fullName>Opportunity Cancelled</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Amended</fullName>
            </value>
            <value>
                <fullName>Customize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>