force-app/main/default/objects/Opportunity/fields/Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if Checked then Opportunity will be tax exempt.</description>
    <label>Tax Exempt</label>
    <type>Checkbox</type>
</CustomField>