force-app/main/default/objects/Opportunity/fields/Tax_Exemption_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_Status__c</fullName>
    <description>Tax Exemption Status</description>
    <label>Tax Exemption Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>File Uploaded</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>