force-app/main/default/objects/Opportunity/fields/Tax_Registration__c.field-meta.xml
<CustomField>
    <fullName>Tax_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Tax Registration to be used on this Contract for the Bill to Account.</description>
    <inlineHelpText>Tax Jurisdiction Auto number.</inlineHelpText>
    <label>Tax Registration Number</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No valid tax registration is available.</errorMessage>
        <filterItems>
            <field>Account_Tax_Number__c.Status__c</field>
            <operation>equals</operation>
            <value>Valid</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Tax_Number__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>