force-app/main/default/objects/Opportunity/fields/Tax_Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Registration_Id__c</fullName>
    <description>This Field shows the valid Account Tax Number Id which enable validation on its respective Account record.</description>
    <inlineHelpText>This Field shows the valid Account Tax Number Id which enable validation on its respective Account record.</inlineHelpText>
    <label>Tax Registration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>