force-app/main/default/objects/Opportunity/fields/Tax_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Tax_Scenario__c</fullName>
    <description>GGCW-2654</description>
    <label>Tax Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK Exhibitor VAT Invoicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>