force-app/main/default/objects/Opportunity/fields/Tax_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Validation_Status__c</fullName>
    <description>Tax Validation Status of Opportunity</description>
    <label>Tax Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Required Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>