force-app/main/default/objects/Opportunity/fields/Total_Milestone_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Milestone_Amount__c</fullName>
    <description>Total Milestone Amount of Opportunity</description>
    <label>Total Milestone Amount</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>