force-app/main/default/objects/Opportunity/fields/Total_Milestone_Dates__c.field-meta.xml
<CustomField>
    <fullName>Total_Milestone_Dates__c</fullName>
    <description>Total Milestone Dates of Opportunity</description>
    <label>Total Milestone Dates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>