force-app/main/default/objects/Opportunity/fields/Total_No_of_payment__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_payment__c</fullName>
    <description>Total No of Payment of Opportunity</description>
    <label>Total No of Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>