force-app/main/default/objects/Opportunity/fields/UAE_VAT_Refund__c.field-meta.xml
<CustomField>
    <fullName>UAE_VAT_Refund__c</fullName>
    <description>UAE VAT Refund</description>
    <label>UAE VAT Refund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Eligible</fullName>
                <default>true</default>
                <label>Not Eligible</label>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>