force-app/main/default/objects/Opportunity/fields/UAE_VAT_Refund_Eligible__c.field-meta.xml
<CustomField>
    <fullName>UAE_VAT_Refund_Eligible__c</fullName>
    <description>UAE VAT Refund Eligible</description>
    <formula>CASE( TEXT(UAE_VAT_Refund__c) , &apos;Eligible&apos;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 90),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UAE VAT Refund Eligible</label>
    <type>Text</type>
</CustomField>