force-app/main/default/objects/Opportunity/fields/UAE_VAT_Refund_Status__c.field-meta.xml
<CustomField>
    <fullName>UAE_VAT_Refund_Status__c</fullName>
    <label>UAE VAT Refund Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>File Uploaded</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>